Bugfix, nav menu need higher z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ main {
 
   font-size: 1rem;
 
-  z-index: 2;
+  z-index: 4;
 
   --color--background: var(--green);
 }
